add views, controllers, everything

--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -1,32 +1,29 @@
 = form_for @entry, :html => { :class => 'form-horizontal' } do |f|
-  .control-group
-    = f.label :entry_type, :class => 'control-label'
-    .controls
-      = f.text_field :entry_type, :class => 'text_field'
+  = f.hidden_field :entry_type
   .control-group
     = f.label :name, :class => 'control-label'
     .controls
-      = f.text_field :name, :class => 'text_field'
+      = f.text_field :name, :class => 'text_field', :placeholder => 'Your name'
   .control-group
     = f.label :email, :class => 'control-label'
     .controls
-      = f.text_field :email, :class => 'text_field'
+      = f.text_field :email, :class => 'text_field', :placeholder => 'your@email-address.org'
   .control-group
     = f.label :phone, :class => 'control-label'
     .controls
-      = f.text_field :phone, :class => 'text_field'
+      = f.text_field :phone, :class => 'text_field', :placeholder => 'Your phone number'
   .control-group
     = f.label :date, :class => 'control-label'
     .controls
-      = f.text_field :date, :class => 'text_field'
+      = f.text_field :date, :class => 'form-control', :data => { :date_format => 'YYYY/MM/DD' }
   .control-group
     = f.label :from, :class => 'control-label'
     .controls
-      = f.text_field :from, :class => 'text_field'
+      = f.text_field :from, :class => 'text_field', :placeholder => 'Your start point'
   .control-group
     = f.label :to, :class => 'control-label'
     .controls
-      = f.text_field :to, :class => 'text_field'
+      = f.text_field :to, :class => 'text_field', :placeholder => 'Your destination'
   .control-group
     = f.label :seats, :class => 'control-label'
     .controls
@@ -34,11 +31,16 @@
   .control-group
     = f.label :notes, :class => 'control-label'
     .controls
-      = f.text_field :notes, :class => 'text_field'
-  .control-group
-    = f.label :secret, :class => 'control-label'
-    .controls
-      = f.text_field :secret, :class => 'text_field'
+      = f.text_area :notes, :class => 'text_field', :class => "input-xlarge"
   .form-actions
     = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), entries_path, :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), root_path, :class => 'btn'
+
+:javascript
+  $(function() {
+    $('#entry_date').datetimepicker({
+        dateFormat: "yy-mm-dd",
+        timeFormat: "hh:mm"
+    });
+  })
+
