--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="container">
+    <%= flash_messages %>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
