--- a/app/views/entries/new.html.haml
+++ b/app/views/entries/new.html.haml
@@ -1,4 +1,4 @@
 - model_class = Entry
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize
+  %h1=t @title
 = render :partial => "form"
