--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -1,49 +1,46 @@
 - model_class = Entry
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.titleize
+  %h1= @title
 
-%p
-  %strong= model_class.human_attribute_name(:entry_type) + ':'
-  %br
-  = @entry.entry_type
-%p
-  %strong= model_class.human_attribute_name(:name) + ':'
-  %br
-  = @entry.name
-%p
-  %strong= model_class.human_attribute_name(:email) + ':'
-  %br
-  = @entry.email
-%p
-  %strong= model_class.human_attribute_name(:phone) + ':'
-  %br
-  = @entry.phone
-%p
-  %strong= model_class.human_attribute_name(:date) + ':'
-  %br
-  = @entry.date
-%p
-  %strong= model_class.human_attribute_name(:from) + ':'
-  %br
-  = @entry.from
-%p
-  %strong= model_class.human_attribute_name(:to) + ':'
-  %br
-  = @entry.to
-%p
-  %strong= model_class.human_attribute_name(:seats) + ':'
-  %br
-  = @entry.seats
-%p
-  %strong= model_class.human_attribute_name(:notes) + ':'
-  %br
-  = @entry.notes
-%p
-  %strong= model_class.human_attribute_name(:secret) + ':'
-  %br
-  = @entry.secret
+%table.table
+  %tbody
+    %tr
+      %td= model_class.human_attribute_name(:name) + ':'
+      %td= @entry.name
+    %tr
+      %td= model_class.human_attribute_name(:phone) + ':'
+      %td= @entry.phone
+    %tr
+      %td= model_class.human_attribute_name(:date) + ':'
+      %td= @entry.date
+    %tr
+      %td= model_class.human_attribute_name(:from) + ':'
+      %td= @entry.from
+    %tr
+      %td= model_class.human_attribute_name(:to) + ':'
+      %td= @entry.to
+    %tr
+      %td= model_class.human_attribute_name(:seats) + ':'
+      %td= @entry.seats
+    %tr
+      %td= model_class.human_attribute_name(:notes) + ':'
+      %td= @entry.notes
 
 .form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), entries_path, :class => 'btn'
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_entry_path(@entry), :class => 'btn'
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), entry_path(@entry), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+  = link_to t('.back', :default => t("helpers.links.back")), root_path, :class => 'btn'
+
+%h2=t '.contact'
+
+= form_tag entry_send_email_path(@entry), :html => { :class => 'form-horizontal' } do
+  %p To contact #{@entry.name}, please enter your mail address and your text below.
+  %hr
+  .control-group
+    = label_tag "Your email address", nil, :class => 'input-xlarge'
+    .controls
+      = text_field_tag :from, nil, :class => 'text_field', :placeholder => "your@email-address.org"
+  .control-group
+    = label_tag "Your text", nil, :class => 'input-xlarge'
+    .controls
+      = text_area_tag :notes, nil, :size => "100x20", :class => 'text_field input-xlarge'
+  .form-actions
+    = submit_tag 'Send email', :class => 'btn btn-primary'
