--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -41,6 +41,6 @@
   .control-group
     = label_tag "Your text", nil, :class => 'input-xlarge'
     .controls
-      = text_area_tag :notes, nil, :size => "100x20", :class => 'text_field input-xlarge'
+      = text_area_tag :text, nil, :size => "100x20", :class => 'text_field input-xlarge'
   .form-actions
     = submit_tag 'Send email', :class => 'btn btn-primary'
