--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,18 +1,20 @@
 - model_class = Entry
 .page-header
-  %h1=t '.title'
+  %h1 Welcome to the ride share platform
 
 .row
-  .col-xs-6.col-centered
-    =link_to t('.edit', :default => t("i_have_a_ride_to_share")), new_entry_path(:entry_type => :offer), :class => 'btn btn-large btn-success'
-    =link_to t('.edit', :default => t("i_need_a_ride")), new_entry_path(:entry_type => :request), :class => 'btn btn-large btn-warning'
+  .span12.text-center
+    =link_to "I have a ride to share!", new_entry_path(:entry_type => :offer), :class => 'btn btn-large btn-success'
+    =link_to "I need a ride!", new_entry_path(:entry_type => :request), :class => 'btn btn-large btn-warning'
 
-%hr
-.row
-  %h2=t '.offers'
-  =render 'entries/list', :entries => @offers
-
-%hr
-.row
-  %h2=t '.requests'
-  =render 'entries/list', :entries => @requests
+%div{:role => "tabpanel"}
+  %ul{:class => "nav nav-tabs", :role => "tablist"}
+    %li{:role => "presentation", :class => "active"}
+      = link_to "People who have a ride to share", "#offers", :'aria-controls' => 'offers', :role => 'tab', :'data-toggle' => 'tab'
+    %li{:role => "presentation"}
+      = link_to "People who need a ride", "#requests", :'aria-controls' => 'requests', :role => 'tab', :'data-toggle' => 'tab'
+  %div{:class => "tab-content"}
+    %div{:role => "tabpanel", :class => "tab-pane active", :id => "offers"}
+      =render 'entries/list', :entries => @offers
+    %div{:role => "tabpanel", :class => "tab-pane", :id => "requests"}
+      =render 'entries/list', :entries => @requests
