--- a/app/views/user_mailer/contact_entry_person.text.erb
+++ b/app/views/user_mailer/contact_entry_person.text.erb
@@ -1,13 +1,12 @@
-Hi!
+Hi <%= @entry.name %>,
 
 Someone posted you a message through AlRide:
 
 <%= @text %>
 
-
 --------------------------
 
-Please, if your entry should be removed from our database, click on the following link.
+If your entry should be removed from our database because it is outdated or no longer neccessary, please click on the following link.
 
 <%= entry_remove_url(@entry, secret: @entry.secret) %>
 
