--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,7 @@
   %h1 Welcome to the ride share platform
 
 .row
-  .span12.text-center
+  .span12.fat-buttons
     =link_to "I have a ride to share!", new_entry_path(:entry_type => :offer), :class => 'btn btn-large btn-success'
     =link_to "I need a ride!", new_entry_path(:entry_type => :request), :class => 'btn btn-large btn-warning'
 
