--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,3 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /* flash-messages */
+
+.fat-buttons {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  text-align: center;
+
+  .btn {
+    margin: 5px;
+  }
+}
