--- a/app/views/user_mailer/contact_entry_person.text.erb
+++ b/app/views/user_mailer/contact_entry_person.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @entry.name %>,
 
-Someone posted you a message through <%= Settings.platform_name %>:
+<%= @from %> posted you a message through <%= Settings.platform_name %>:
 
 <%= @text %>
 
