welcome: use platform_name for greeting

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,6 @@
 - model_class = Entry
 .page-header
-  %h1 Welcome to the ride share platform
+  %h1= "Welcome to #{Settings.platform_name}!"
 
 .row
   .span12.fat-buttons
