--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -3,27 +3,27 @@
   .control-group
     = f.label :name, :class => 'control-label'
     .controls
-      = f.text_field :name, :class => 'text_field', :placeholder => 'Your name'
+      = f.text_field :name, :class => 'text_field', :placeholder => t('your_name')
   .control-group
     = f.label :email, :class => 'control-label'
     .controls
-      = f.text_field :email, :class => 'text_field', :placeholder => 'your@email-address.org'
+      = f.text_field :email, :class => 'text_field', :placeholder => t('your_email_address')
   .control-group
     = f.label :phone, :class => 'control-label'
     .controls
-      = f.text_field :phone, :class => 'text_field', :placeholder => 'Your phone number'
+      = f.text_field :phone, :class => 'text_field', :placeholder => t('your_phone_number')
   .control-group
     = f.label :date, :class => 'control-label'
     .controls
-      = f.text_field :date, :class => 'form-control', :data => { :date_format => 'YYYY/MM/DD' }
+      = f.text_field :date, :class => 'form-control', :data => { :date_format => 'YYYY/MM/DD' }, :placeholder => t('date_and_time')
   .control-group
     = f.label :from, :class => 'control-label'
     .controls
-      = f.text_field :from, :class => 'text_field', :placeholder => 'Your start point'
+      = f.text_field :from, :class => 'text_field', :placeholder => t('your_start_point')
   .control-group
     = f.label :to, :class => 'control-label'
     .controls
-      = f.text_field :to, :class => 'text_field', :placeholder => 'Your destination'
+      = f.text_field :to, :class => 'text_field', :placeholder => t('your_destination')
   .control-group
     = f.label :seats, :class => 'control-label'
     .controls
@@ -33,8 +33,8 @@
     .controls
       = f.text_area :notes, :class => 'text_field', :class => "input-xlarge"
   .form-actions
-    = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), root_path, :class => 'btn'
+    = f.submit t('create_entry'), :class => 'btn btn-primary'
+    = link_to t('cancel'), root_path, :class => 'btn'
 
 :javascript
   $(function() {
