--- a/app/views/entries/_list.html.haml
+++ b/app/views/entries/_list.html.haml
@@ -15,4 +15,4 @@
         %td= entry.to
         %td= entry.seats
         %td
-          = link_to t('.show_details'), entry_path(entry), :class => 'btn btn-mini'
+          = link_to t('show_details'), entry_path(entry), :class => 'btn btn-mini'
