--- a/app/views/entries/new.html.haml
+++ b/app/views/entries/new.html.haml
@@ -2,5 +2,5 @@
 .page-header
   %h1= @title
   %p= @text
-  %p Please complete the form below. Your email address will not be visible by anyone. A phone number is optional and will be shown to others.
+  %p=t 'please_complete_the_form'
 = render :partial => "form"
