--- a/app/views/user_mailer/contact_entry_person.en.text.erb
+++ b/app/views/user_mailer/contact_entry_person.en.text.erb
@@ -8,5 +8,5 @@ Hi <%= @entry.name %>,
 
 If your entry should be removed from our database because it is outdated or no longer neccessary, please click on the following link.
 
-<%= entry_remove_url(@entry, secret: @entry.secret) %>
+<%= entry_remove_url(@entry, secret: @entry.secret, locale: I18n.locale) %>
 
