--- a/app/views/user_mailer/entry_created.de.text.erb
+++ b/app/views/user_mailer/entry_created.de.text.erb
@@ -23,5 +23,5 @@ Leute, die eine MFG suchen, können dich jetzt über unsere Webseite kontaktiere
 
 Wenn dein Eintrag nicht mehr aktuell ist und entfernt werden sollte, klicke bitte auf den folgenden Link.
 
-<%= entry_remove_url(@entry, secret: @entry.secret) %>
+<%= entry_remove_url(@entry, secret: @entry.secret, locale: I18n.locale) %>
 
