--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,6 @@
 - model_class = Entry
 .page-header
-  %h1= t('welcome_to') + " #{Settings.platform_name}!"
+  %h1= ENV['ALRIDE_PLATFORM_NAME']
 
 .row
   .span12.fat-buttons
