--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,8 @@
 .page-header
-  %h1= ENV['ALRIDE_PLATFORM_NAME']
+  - if @header_html
+    =@header_html.html_safe
+  - else
+    %h1= ENV['ALRIDE_PLATFORM_NAME']
 
 .row
   .span12.fat-buttons
