add option to ask for drivers
Let people who offer a ride specify whether they want to drive the car
themselves or whether they look for someone to do it.

Also provide a checkbox in the contact form for people contacting offers,
saying whether they would be up for doing the driving.

--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -29,6 +29,10 @@
     .controls
       = f.text_field :seats, :class => 'text_field'
   .control-group
+    = f.label @entry.entry_type.to_sym == :offer ? t('are_you_driving_youself') : t('would_you_drive'), :class => 'control-label'
+    .controls
+      = f.check_box :driver, :class => 'check_box'
+  .control-group
     = f.label :notes, :class => 'control-label'
     .controls
       = f.text_area :notes, :class => 'text_field', :class => "input-xlarge"
@@ -43,4 +47,3 @@
         timeFormat: "hh:mm"
     });
   })
-
