--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -1,49 +1,55 @@
-= form_for @entry, html: { class: 'form-horizontal' } do |f|
-  = f.hidden_field :entry_type
-  .control-group
-    = f.label :name, class: 'control-label'
-    .controls
-      = f.text_field :name, class: 'text_field', placeholder: t('your_name')
-  .control-group
-    = f.label :email, class: 'control-label'
-    .controls
-      = f.text_field :email, class: 'text_field', placeholder: t('your_email_address')
-  .control-group
-    = f.label :phone, class: 'control-label'
-    .controls
-      = f.text_field :phone, class: 'text_field', placeholder: t('your_phone_number')
-      .control-group
-    = f.label :date, class: 'control-label'
-    .controls
-      = f.text_field :date, class: 'form-control', data: { date_format: 'YYYY/MM/DD' }, placeholder: t('date_and_time')
-  .control-group
-    = f.label :from, class: 'control-label'
-    .controls
-      = f.text_field :from, class: 'text_field', placeholder: t('your_start_point')
-  .control-group
-    = f.label :to, class: 'control-label'
-    .controls
-      = f.text_field :to, class: 'text_field', placeholder: t('your_destination')
-  .control-group
-    = f.label :seats, class: 'control-label'
-    .controls
-      = f.text_field :seats, class: 'text_field'
-  .control-group
-    = f.label @entry.entry_type.to_sym == :offer ? t('are_you_driving_youself') : t('would_you_drive'), class: 'control-label'
-    .controls
-      = f.check_box :driver, class: 'check_box'
-  .control-group
-    = f.label :notes, class: 'control-label'
-    .controls
-      = f.text_area :notes, class: 'text_field', class: "input-xlarge"
-  .form-actions
-    = f.submit t('create_entry'), class: 'btn btn-primary'
-    = link_to t('cancel'), root_path, class: 'btn'
+= form_for @entry do |f|
+  .panel.panel-default
+    .panel-body
+      = f.hidden_field :entry_type
+      .form-group
+        = f.label :name, class: 'control-label'
+        = f.text_field :name, class: 'form-control', placeholder: t('your_name')
+
+      .form-group
+        = f.label :email, class: 'control-label'
+        = f.text_field :email, class: 'form-control', placeholder: t('your_email_address')
+
+      .form-group
+        = f.label :phone, class: 'control-label'
+        = f.text_field :phone, class: 'form-control', placeholder: t('your_phone_number')
+
+      .form-group
+        = f.label :date, class: 'control-label'
+        = f.text_field :date, class: 'form-control', data: { date_format: 'YYYY/MM/DD' }, placeholder: t('date_and_time')
+
+      .form-group
+        = f.label :from, class: 'control-label'
+        = f.text_field :from, class: 'form-control', placeholder: t('your_start_point')
+
+      .form-group
+        = f.label :to, class: 'control-label'
+        = f.text_field :to, class: 'form-control', placeholder: t('your_destination')
+
+      .form-group
+        = f.label :seats, class: 'control-label'
+        = f.text_field :seats, class: 'form-control'
+
+      .form-group
+        = f.label @entry.entry_type.to_sym == :offer ? t('are_you_driving_youself') : t('would_you_drive'), class: 'control-label'
+        = f.check_box :driver, class: 'check_box'
+
+      .form-group
+        = f.label :notes, class: 'control-label'
+        = f.text_area :notes, class: 'form-control'
+
+    .panel-footer
+      .form-actions
+        =f.submit t('create_entry'), class: 'btn btn-primary'
+        =link_to t('cancel'), root_path, class: 'btn'
 
 :javascript
-  $(function() {
+  $(function () {
     $('#entry_date').datetimepicker({
-        dateFormat: "yy-mm-dd",
-        timeFormat: "hh:mm"
+      format: "dd.mm.yyyy hh:ii",
+      autoclose: true,
+      todayBtn: true,
+      startDate: "#{Time.now.to_s}",
+      minuteStep: 10,
     });
-  })
+  });
