--- a/app/views/entries/_list.html.haml
+++ b/app/views/entries/_list.html.haml
@@ -1,7 +1,8 @@
 %table.table.table-striped
   %thead
     %tr
-      %th= t('date')
+      %th= t('entry_date')
+      %th= t('who')
       %th= t('from')
       %th= t('to')
       %th= t('seats')
@@ -9,9 +10,9 @@
   %tbody
     - entries.each do |entry|
       %tr
-        %td= entry.date.to_formatted_s(:long)
+        %td= l entry.date, format: :long
+        %td= entry.name
         %td= entry.from
         %td= entry.to
         %td= entry.seats
-        %td
-          = link_to t('show_details'), entry_path(entry), class: 'btn btn-mini'
+        %td= link_to t('show_details'), entry_path(entry), class: 'btn btn-default btn-xs', role: 'button'
