--- a/app/views/entries/new.html.haml
+++ b/app/views/entries/new.html.haml
@@ -1,5 +1,10 @@
-.page-header
-  %h1= @title
-  %p= @text
-  %p=t 'please_complete_the_form'
-= render partial: "form"
+.container
+  .row
+    .col-md-2
+    .col-md-8
+      .page-header
+        %h1= @title
+        %p= @text
+        %p=t 'please_complete_the_form'
+
+      =render partial: "form"
