--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,18 +5,25 @@
     %h1= ENV['ALRIDE_PLATFORM_NAME']
 
 .row
-  .span12.fat-buttons
-    =link_to t('have_a_ride'), new_entry_path(entry_type: :offer),   class: 'btn btn-large btn-success'
-    =link_to t('need_a_ride'), new_entry_path(entry_type: :request), class: 'btn btn-large btn-warning'
+  .col-md-12
+    .well.fat-buttons
+      =link_to t('have_a_ride'), new_entry_path(entry_type: :offer),   class: 'btn btn-lg btn-success'
+      =link_to t('need_a_ride'), new_entry_path(entry_type: :request), class: 'btn btn-lg btn-warning'
 
-%div{ role: "tabpanel" }
-  %ul.nav.nav-tabs{ role: "tablist" }
-    %li.active{ role: "presentation" }
-      = link_to t('people_who_have_a_ride') + " (#{@offers.length})", "#offers", 'aria-controls': 'offers', role: 'tab', 'data-toggle': 'tab'
-    %li{ role: "presentation" }
-      = link_to t('people_who_need_a_ride') + " (#{@requests.length})", "#requests", 'aria-controls': 'requests', role: 'tab', 'data-toggle': 'tab'
-  .tab-content
-    .tab-pane.active{ role: "tabpanel", id: "offers" }
-      =render 'entries/list', entries: @offers
-    .tab-pane{ role: "tabpanel", id: "requests" }
-      =render 'entries/list', entries: @requests
+.row
+  .col-md-12
+    %div{ role: "tabpanel" }
+      %ul.nav.nav-tabs.nav-justified
+        %li.active{ role: "presentation" }
+          = link_to "#offers", 'aria-controls': 'offers', role: 'tab', 'data-toggle': 'tab' do
+            =t('people_who_have_a_ride')
+            %span.badge= @offers.length
+        %li{ role: "presentation" }
+          =link_to "#requests", 'aria-controls': 'requests', role: 'tab', 'data-toggle': 'tab' do
+            =t('people_who_need_a_ride')
+            %span.badge= @requests.length
+      .tab-content
+        .tab-pane.active{ role: "tabpanel", id: "offers" }
+          =render 'entries/list', entries: @offers
+        .tab-pane{ role: "tabpanel", id: "requests" }
+          =render 'entries/list', entries: @requests
