--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -66,7 +66,7 @@
               =t('back')
 
       =form_tag entry_send_email_path(@entry) do
-        %h2=t '.contact'
+        %h2=t 'contact'
         .panel.panel-default
           .panel-heading
             %h3.panel-title= t('to_contact_text', name: @entry.name)
