more language tweaks

--- a/app/views/user_mailer/entry_created.de.text.erb
+++ b/app/views/user_mailer/entry_created.de.text.erb
@@ -3,7 +3,7 @@ Hi <%= @entry.name %>,
 <% if @entry.entry_type.to_sym == :request %>
 Vielen Dank für das Einstellen deines Gesuchs!
 <% else %>
-Vielen Dank, dass du eine MFG anbietest!
+Vielen Dank, dass Du eine MFG anbietest!
 <% end %>
 
 Dein <%= t(@entry.entry_type) %> wurde mit den folgenden Details gespeichert:
@@ -16,12 +16,12 @@ Dein <%= t(@entry.entry_type) %> wurde mit den folgenden Details gespeichert:
 
 
 <% if @entry.entry_type.to_sym == :request %>
-Leute, die eine MFG anbieten, können dich jetzt über unsere Webseite kontaktieren.
+Leute, die eine MFG anbieten, können Dich jetzt über unsere Webseite kontaktieren.
 <% else %>
-Leute, die eine MFG suchen, können dich jetzt über unsere Webseite kontaktieren.
+Leute, die eine MFG suchen, können Dich jetzt über unsere Webseite kontaktieren.
 <% end %>
 
-Wenn dein Eintrag nicht mehr aktuell ist und entfernt werden sollte, klicke bitte auf den folgenden Link.
+Wenn Dein Eintrag nicht mehr aktuell ist und entfernt werden sollte, klicke bitte auf den folgenden Link.
 
 <%= entry_remove_url(@entry, secret: @entry.secret, locale: I18n.locale) %>
 
