switch from dotenv back to config
This has been changed the other way around, but I really prefer the config
gem over dotenv. And it turns out to be possible to use config in Heroku as
well, so let's do that.

--- a/app/views/user_mailer/contact_entry_person.de.text.erb
+++ b/app/views/user_mailer/contact_entry_person.de.text.erb
@@ -1,6 +1,6 @@
 Hallo <%= @entry.name %>,
 
-<%= @from %> hat dir über <%= ENV['ALRIDE_PLATFORM_NAME'] %> eine Nachricht geschickt:
+<%= @from %> hat dir über <%= Settings.platform_name %> eine Nachricht geschickt:
 
 <%= @text %>
 
