--- a/app/views/user_mailer/contact_entry_person.en.text.erb
+++ b/app/views/user_mailer/contact_entry_person.en.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @entry.name %>,
 
-<%= @from %> posted you a message through <%= ENV['ALRIDE_PLATFORM_NAME'] %>:
+<%= @from %> posted you a message through <%= Settings.platform_name %>:
 
 <%= @text %>
 
