--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,7 +2,7 @@
   - if @header_html
     =@header_html.html_safe
   - else
-    %h1= ENV['ALRIDE_PLATFORM_NAME']
+    %h1= Settings.platform_name
 
 .row
   .col-md-12
