remove WelcomeController, let EntiresController handle #index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "theme";
-@import "welcome";
+@import "entries";
 @import "bootstrap-datetimepicker.min";
